Some codestyle changes

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
 - name: install packages
-  apt: name={{ item }} state=present update_cache=yes cache_valid_time=1800
+  apt: 
+    name: "{{ item }}"
+    state: present
+    update_cache: yes
+    cache_valid_time: 1800
   with_items:
     - tmux
     - powerline
@@ -11,19 +15,44 @@
   changed_when: False
   
 - name: generate system-wide tmux config
-  template: src=tmux.conf.j2 dest=/etc/tmux.conf owner=root group=root mode=0644
+  template:
+    src: tmux.conf.j2
+    dest: /etc/tmux.conf
+    owner: root
+    group: root
+    mode: 0644
   
 - name: ensure tmux powerline config directories exist
-  file: path={{ item }} state=directory owner=root group=root mode=0644
+  file: 
+    path: "{{ item }}"
+    state: directory
+    owner: root
+    group: root
+    mode: 0644
   with_items:
     - /etc/xdg/powerline/colorschemes/tmux
     - /etc/xdg/powerline/themes/tmux
   
 - name: copy powerline config
-  copy: src=powerline_config.json dest=/etc/xdg/powerline/config.json owner=root group=root mode=0644
+  copy: 
+    src: powerline_config.json
+    dest: /etc/xdg/powerline/config.json
+    owner: root
+    group: root
+    mode: 0644
   
 - name: copy tmux powerline config
-  copy: src=powerline_tmux_vsos.json dest=/etc/xdg/powerline/themes/tmux/vsos.json owner=root group=root mode=0644
+  copy:
+    src: powerline_tmux_vsos.json
+    dest: /etc/xdg/powerline/themes/tmux/vsos.json
+    owner: root
+    group: root
+    mode: 0644
   
 - name: copy tmux powerline colorscheme
-  copy: src=powerline_color_tmux_vsos.json dest=/etc/xdg/powerline/colorschemes/tmux/vsos.json owner=root group=root mode=0644
+  copy: 
+    src: powerline_color_tmux_vsos.json
+    dest: /etc/xdg/powerline/colorschemes/tmux/vsos.json
+    owner: root
+    group: root
+    mode: 0644
