Get tmux version even when run in check mode to ensure variables are defined in further tasks

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,6 +22,7 @@
   shell: tmux -V | cut -d ' ' -f2
   register: tmux_version
   changed_when: False
+  check_mode: no
   
 - name: generate system-wide tmux config
   template:
