--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,6 +10,10 @@ galaxy_info:
     - name: Debian
       versions:
         - jessie
+        - stretch
+    - name: Fedora
+      versions:
+        - 25
   categories:
     #- cloud
     #- cloud:ec2
