--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -11,6 +11,7 @@
   when: ansible_distribution == "Fedora"
 
 - name: install packages
+  become: True
   package:
     name: "{{ item }}"
     state: present
@@ -25,6 +26,7 @@
   check_mode: no
   
 - name: generate system-wide tmux config
+  become: True
   template:
     src: tmux.conf.j2
     dest: /etc/tmux.conf
@@ -33,6 +35,7 @@
     mode: 0644
   
 - name: ensure tmux powerline config directories exist
+  become: True
   file: 
     path: "{{ item }}"
     state: directory
@@ -44,6 +47,7 @@
     - /etc/xdg/powerline/themes/tmux
   
 - name: copy powerline config
+  become: True
   copy: 
     src: powerline_config.json
     dest: /etc/xdg/powerline/config.json
@@ -52,6 +56,7 @@
     mode: 0644
   
 - name: copy tmux powerline config
+  become: True
   copy:
     src: powerline_tmux_vsos.json
     dest: /etc/xdg/powerline/themes/tmux/vsos.json
@@ -60,6 +65,7 @@
     mode: 0644
   
 - name: copy tmux powerline colorscheme
+  become: True
   copy: 
     src: powerline_color_tmux_vsos.json
     dest: /etc/xdg/powerline/colorschemes/tmux/vsos.json
