--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,29 +4,15 @@ galaxy_info:
   description: See README.md 
   company: sos.ethz.ch
   # issue_tracker_url: 
-  license: All rights reserved.
-  min_ansible_version: 2.0
+  license: GPLv3
+  min_ansible_version: 2.6
   platforms:
     - name: Debian
       versions:
-        - jessie
         - stretch
     - name: Fedora
       versions:
         - 25
   categories:
-    #- cloud
-    #- cloud:ec2
-    #- cloud:gce
-    #- cloud:rax
-    #- clustering
-    #- database
-    #- database:nosql
-    #- database:sql
-    #- development
-    #- monitoring
-    #- networking
-    #- packaging
-    #- system
-    #- web
+    - system
   dependencies: []
