--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,18 +1,13 @@
 ---
 galaxy_info:
   author: SOSETH
-  description: See README.md 
+  namespace: soseth
+  description: See README.md
   company: sos.ethz.ch
-  # issue_tracker_url: 
   license: GPLv3
-  min_ansible_version: 2.6
+  min_ansible_version: "2.6"
   platforms:
     - name: Debian
-      versions:
-        - stretch
     - name: Fedora
-      versions:
-        - 25
-  categories:
+  galaxy_tags:
     - system
-  dependencies: []
